tests/marouter/errors/false_options/missing_input/options.marouter
-a input_taz.taz.xml -o routes.rou.xml
